[package]
name = "boringtun"
description = "an implementation of the WireGuard® protocol designed for portability and speed"
version = "0.5.2"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>", "Andy Grover <agrover@cloudflare.com>", "Jeff Hiner <jhiner@cloudflare.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/cloudflare/boringtun"
documentation = "https://docs.rs/boringtun/0.5.2/boringtun/"
edition = "2018"

[features]
jni-bindings = ["ffi-bindings", "jni"]
ffi-bindings = []

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
untrusted = "0.9.0"
libc = "0.2.158"
parking_lot = "0.12.3"
tracing = "0.1.40"
ip_network = "0.4.1"
ip_network_table = "0.2.0"
ring = "0.17.8"
x25519-dalek = { version = "2.0.1", features = ["reusable_secrets", "static_secrets"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
chacha20poly1305 = "0.10.1"
aead = "0.5.2"
blake2 = "0.10.6"
hmac = "0.12.1"
jni = { version = "0.19.0", optional = true }

[target.'cfg(target_os="macos")'.dependencies]
nix = "0.24.3"

[dev-dependencies]
tracing-subscriber = "0.3.18"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "crypto_benches"
harness = false
